# credless_env

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  agent2_policy.py  baseline.py  blog.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rollout_collector.py  smoke_test.py  tmp_infer_check.jsonl  tmp_infer_check_summary.json  train grpo unsloth binary.py  train.py
.runtime/: tmp_results_after.jsonl  tmp_results_after2.jsonl  tmp_results_after3.jsonl  (+6 more)
credless_env-newbranch/: .gitignore  README.md  agent2_llm.py  inference_results.jsonl  inference_summary.json  pyproject.toml  requirements.txt  smoke_test.py  tmp_infer_check_summary.json  train.py  validate-submission.sh
credless_env-newbranch/.runtime/: tmp_results.jsonl  tmp_summary_after.json  tmp_summary_after4.json
credless_env-newbranch/.runtime/sessions/: 01cedb95-ebf1-44e0-a5ab-be597b908f80.json  05cf5198-332d-4b0d-9f6b-3c1517cec991.json  0b3d4e6b-73f9-4062-a9bf-187bccbdb9d9.json  0bb0595a-1d55-4fbd-ba44-190feb43ed49.json  0ffd568d-be29-43ed-8f36-f4af00e08584.json  25414a35-0177-4948-bea9-3764a4d01057.json  27193435-0c02-4829-b6da-73cbf8ab4fdf.json  45721601-478a-4ed3-8896-e5d73b7d68d8.json  489885b0-52d0-4563-b417-747b8dcff00d.json  5cc28dbc-4c25-4124-b957-4ab1e61e4ee5.json  67a252f9-5bfd-442b-89f8-3f8dcfd5629f.json  69e176fa-11a7-4a41-b25a-5dd88fa8f201.json  6eb9f36b-d587-4d0a-a626-d601fd309b27.json  88256ae0-8b0f-4fec-be4e-186a92d287dd.json  96ff065b-d231-4909-b65b-702ccc26b93c.json  a6121405-9902-4000-a631-e60eb0bd669b.json  b8818b9a-c269-406e-8f53-2aee07a1cb0e.json  d2f0bc83-d0ae-465d-b881-c09d05dace73.json  d38df4dd-edee-4590-942c-70a412e7cd1e.json  d433eaf8-b061-4160-863b-57a4f021d633.json  d6048a7d-6dc5-4f16-a909-04607f5a584f.json  df06c6f3-9722-4bf0-8e70-89a566a94b84.json  df4cf43f-2662-4aed-acca-34959136171d.json  dffa221f-a2a7-4874-b6e8-7d05bb2cf1fb.json  e873ee88-11e3-4909-89b8-b8f855d0ad65.json  eac3003a-4f49-4b6b-911a-a9f024e9b7bc.json  fb201aa7-9f14-42ab-b5b4-8546d9951217.json
credless_env-newbranch/agent2-decision-base/: train.py
credless_env-newbranch/agent2-decision-base/checkpoints/: agent2_metadata.json
credless_env-newbranch/agent2_llm_checkpoints/grpo/: README.md  adapter_config.json
credless_env-newbranch/agent2_llm_checkpoints/grpo_tiny/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer.json
credless_env-newbranch/credless_model/: dataset_pipeline.py
credless_env-newbranch/models/: __init__.py
credless_env-newbranch/pipeline/: main_pipeline.py
credless_env-newbranch/rl/: diagnostics.py  reward_logger.py  rollout_collector.py  trainer.py  training_summary.json
credless_env-newbranch/server/: environment.py  models.py  oracle.py
credless_env-newbranch/tests/: test_env_runner_ppo.py  test_environment_grading.py  test_oracle_thresholds.py  test_session_api.py
(+63 files in other folders)
