[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credless-env"
version = "1.0.0"
description = "CredLess Credit Analyst — OpenEnv RL environment for alternative credit scoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "joblib",
    "numpy>=1.24",
    "openai>=1.0",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = ["pytest", "httpx"]

[tool.hatch.envs.default.scripts]
server = "uvicorn server.app:app --host 0.0.0.0 --port 7860 --reload"
train  = "python credless_model/train.py"
test   = "pytest tests/"

[project.scripts]
server = "server.app:main"