[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credless-env"
version = "1.0.0"
description = "CredLess Credit Analyst — OpenEnv RL environment"
requires-python = ">=3.10"
dependencies = [
    "openenv==0.1.13",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "joblib",
    "numpy>=1.24",
    "openai>=1.0",
    "requests",
    "python-dotenv",
]

# ✅ ADD THIS — fixes Issue 1
[project.scripts]
credless-server = "server.app:main"
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default.scripts]
server = "uvicorn server.app:app --host 0.0.0.0 --port 7860 --reload"
train  = "python credless_model/train.py"