[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credless-env"
version = "1.0.0"
description = "CredLess two-agent credit investigation environment with unified oracle training, inference, and OpenEnv serving"
requires-python = ">=3.10"
dependencies = [
    "openenv==0.1.13",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "joblib",
    "numpy>=1.24",
    "pandas>=2.0",
    "shap>=0.42.0",
    "openai>=1.0",
    "requests",
    "python-dotenv",
]

[project.scripts]
server = "server.app:main"
credless-server = "server.app:main"
credless-train = "train:main"
credless-infer = "inference:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["credless_model", "env", "models", "pipeline", "server"]

[tool.hatch.envs.default.scripts]
server = "uvicorn server.app:app --host 0.0.0.0 --port 7860 --reload"
train = "python train.py"
infer = "python inference.py"
